# secGear

./: .gitignore  0001-add-README.cn.md.patch  0002-it-is-better-to-define-enum-from-0-rather-than-1.patch  0003-update-README.cn.md.patch  0004-update-README.cn.md.patch  0005-delete-unnecessary-README.cn.md.patch  0006-fix-issues-about-double-create-destory.patch  0007-to-make-secGear-log-more-clear.patch  0008-modify-path-error.patch  0009-fix-cmake-error-of-missing-CMAKE_CXX_COMPILER.patch  0010-fix-sgxssl-edl.patch  0010-update-docs-build_install.md.patch  0012-modify-the-prompt-information.patch  0013-parse-new-error-code-and-del-redundant-print.patch  0014-fix-error-print.patch  0014-set-umask-in-sign_tool.sh.patch  0015-1.fix-the-race-of-ecall-and-enclave-destroy.patch  0017-fix-wrong-spelling-and-null-pointer-dereference-issu.patch  0017-update-signtool-codegen.patch  0018-update-sign_tool.doc.patch  0019-normalized-codegen-from-arm-and-x86.patch  0020-rm-e-parameter-normalize-c-parameter.patch  0021-example-use-absolute-path-to-find-enclave.sign.so.patch  0022-add-example-of-using-sgxssl-lib.patch  0023-tls_enclave-is-not-compiled-by-default.patch  0024-Cmake-replace-minial-cmake-from-3.12-to-3.10.patch  0025-example-add-example-for-LRT-long-running-task.patch  0026-example-add-Dockerfile-to-build-lrt-example-image.patch  0027-Change-to-use-the-milestone-picture-with-English.patch  0028-example-use-the-sgx-device-plugin-from-intel.patch  0029-some-adaptations-for-trustzone.patch  0030-fix-sgx-two-step-mode-bug-add-dump-command.patch  0031-set-signtool_v3.py-path.patch  0032-del-size_to_aligned_size.patch  0033-fix-use-after-free-in-cc_enclave_create.patch  0033-modify-the-error-information-when-missing-c-and-m.patch  0034-normalize-the-log-printed-by-PrintInfo.patch  0035-itrustee-add-lrt-support-itrustee.patch  0036-enclave-use-the-can-pull-image-from-hub.oepkgs.net.patch  0037-add-description-about-file-parameter-path-for-sign_t.patch  (+45 more)
component/local_attest/: CMakeLists.txt  gp_local_attest.c  local_attest_agent.h  sg_local_attest.c  sg_local_attest.h  sgx_local_attest.c
component/ra_tls/: CMakeLists.txt  README.md  openssl_imp.c  ra_tls.c  ra_tls_imp.h
component/remote_attest/: CMakeLists.txt  sg_report_st.h
component/remote_attest/ra_report/: CMakeLists.txt  gp_ra_helper.c  gp_ra_helper.h  gp_ra_report.c  gp_ra_report.h  gp_report_helper.c  gp_report_helper.h  qt_ra_report.c  qt_ra_report.h  qtsm_attestation_enclave.c  sg_ra_report.c  sg_ra_report.edl  sg_ra_report.h  sgx_ra_report.c  sgx_ra_report.h  uni_ra_agent.h  uni_ree_agent.h
component/remote_attest/ra_verify/: CMakeLists.txt  gp_ra_report_verify.c  gp_ra_report_verify.h  sg_ra_report_verify.c  sg_ra_report_verify.h  sgx_ra_report_verify.c  sgx_ra_report_verify.h
component/secure_channel/: CMakeLists.txt  Readme.md  secure_channel.edl  secure_channel_common.c  secure_channel_common.h
component/secure_channel/client/: CMakeLists.txt  secure_channel_client.c  secure_channel_client.h
component/secure_channel/enclave/: CMakeLists.txt  secure_channel_enclave.c  secure_channel_enclave.h
component/secure_channel/host/: CMakeLists.txt  secure_channel_host.c  secure_channel_host.h
examples/: CMakeLists.txt
examples/helloworld/: CMakeLists.txt  helloworld.edl
examples/helloworld/enclave/: CMakeLists.txt  Dockerfile  config_cloud.ini  enclave.c  hello.c  manifest.txt
examples/helloworld/host/: CMakeLists.txt  main.c
examples/local_attest/: CMakeLists.txt  README_EN.md  Readme.md  basevalue.txt  la_demo.edl
examples/local_attest/enclave/: CMakeLists.txt  enclave.c  manifest.txt
examples/local_attest/host/: CMakeLists.txt  main.c
examples/lrt/: CMakeLists.txt  Dockerfile  device_plugin.yaml  enclave.yaml
examples/lrt/enclave/: CMakeLists.txt  lrt.c  manifest.txt.in
examples/lrt/host/: CMakeLists.txt  main.c
examples/npu_attestation/: HowTo.en.md  HowTo.md  README.md  README_EN.md
examples/npu_attestation/helloworld_ta/: CMakeLists.txt
examples/npu_attestation/scripts/: ascendfw.fc  ascendfw.te  ima-policy
examples/qingtian_verify_report/: CMakeLists.txt  README.md  qingtian_verify_report.edl
examples/qingtian_verify_report/enclave/: CMakeLists.txt  Dockerfile  main.c
examples/qingtian_verify_report/verifier/: CMakeLists.txt  main.c  qt_attestation_api.h  qt_attestation_def.h  qt_parse_attestation.c  qt_ra_report_verify.c  qt_ra_report_verify.h
examples/ra_tls/: CMakeLists.txt  client.c  server.c
examples/remote_attest/: CMakeLists.txt  README_EN.md  Readme.md  basevalue.txt  qca_demo.c  ra_demo.edl
examples/remote_attest/enclave/: CMakeLists.txt  enclave.c
examples/remote_attest/host/: CMakeLists.txt  main.c
examples/seal_data/: CMakeLists.txt  seal_data.edl
examples/seal_data/enclave/: CMakeLists.txt  config_cloud.ini  manifest.txt.in  rsa_public_key_cloud.pem  seal_data.c
examples/seal_data/host/: CMakeLists.txt  main.c
examples/secgear_da/: CMakeLists.txt  README.md  README_EN.md  da.edl  test_ec_group.cpp
examples/secgear_ds/: CMakeLists.txt  README.md  README_EN.md  secgear_ds.edl
examples/secgear_kms/: CMakeLists.txt  README.md  README_EN.md  kms.edl
examples/secgear_starterkit/: .gitignore  Copyright  README.md
examples/secure_channel/: CMakeLists.txt  README_EN.md  Readme.md  basevalue.txt  sc_demo.edl  usr_msg.h
examples/secure_mapping/: CMakeLists.txt  sm_demo.edl
examples/switchless/: CMakeLists.txt  README.md  README_EN.md  switchless.edl
examples/switchless_performance/: CMakeLists.txt  README.md  README_EN.md  switchless.edl
examples/tls_enclave/: CMakeLists.txt  tls_enclave.edl  tls_enclave.md
examples/tprotected_test/: CMakeLists.txt  tprotected_test.edl
secTools/secharden/: DEVELOPMENT.md  MANIFEST.in  README.md  README_EN.md  pyproject.toml
src/: CMakeLists.txt
src/common/qingtian/: qt_call.c  (+2 more)
src/enclave_src/: CMakeLists.txt  memory_check.c  secgear_file_tprotected.c  secgear_random.c  secgear_seal_data.c
src/host_src/: CMakeLists.txt  enclave.c  enclave_internal.c  enclave_ocall.c  ocall_log.c  secgear_shared_memory.c
(+791 files in other folders)
